# leanai-asstf

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  LICENSE-COMMUNITY  PATENTS.md  README.md  README_EN.md  README_FOR_COLLEAGUE.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  run_all.py  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml
API_EN/: index.html
ARCHITECTURE_EN/: index.html
BENCHMARKS/: index.html
BUSINESS_ROADMAP/: index.html
COMMERCIAL_LICENSE/: index.html
COMMERCIAL_MODEL/: index.html
COMMUNITY_LICENSE/: index.html
DESIGN_IMPLEMENTATION_REVIEW/: index.html
Document/: ASSTF-based project.docx  OpenSourceStrategy.docx
GITHUB_PLACEMENT/: index.html
INTRODUCTION_EN/: index.html
OPEN_SOURCE_STAGES/: index.html
ORDER_FORM_TEMPLATE/: index.html
PROMOTION_STRATEGY/: index.html
STAGE1_EXECUTION_PLAN/: index.html
STAGE1_IMPACT_ASSESSMENT/: index.html
USAGE_EN/: index.html
app_01_gesture/: README.md  evaluate.py  search_min_asstf.py  train.py
app_02_wake_word/: README.md  evaluate.py  train.py
app_03_anomaly/: README.md  evaluate.py  train.py
app_04_few_shot/: README.md  evaluate.py  train.py
app_05_rl/: README.md  evaluate.py  train.py
app_06_edge_nlp/: README.md  evaluate.py  experiment_asstf_only.py  prepare_sst2_sentencepiece.py  train.py  train_asstf_realdata.py  train_asstf_realdata_96.py  train_static_realdata.py
asstf/: __init__.py  adaptation.py  core.py  trainer.py
checkpoints/app_01_gesture/: metadata.json
checkpoints/app_02_wake_word/: metadata.json
checkpoints/app_03_anomaly/: metadata.json
checkpoints/app_04_few_shot/: metadata.json
checkpoints/app_05_rl/: metadata.json
checkpoints/app_06_edge_nlp/: metadata.json
docs/: API_EN.md  ARCHITECTURE_EN.md  BENCHMARKS.md  BUSINESS_ROADMAP.md  COMMERCIAL_LICENSE.md  COMMERCIAL_MODEL.md  DESIGN_IMPLEMENTATION_REVIEW.md  GITHUB_PLACEMENT.md  INTRODUCTION_EN.md  OPEN_SOURCE_STAGES.md  ORDER_FORM_TEMPLATE.html  ORDER_FORM_TEMPLATE.md  PROMOTION_STRATEGY.md  STAGE1_EXECUTION_PLAN.md  STAGE1_IMPACT_ASSESSMENT.md  USAGE_EN.md  index.md
marketing/: ANALYTICS_SETUP.md  KOL_OUTREACH.md
marketing/launch/: README.md  blog_post.md  chinese.md  linkedin.md  reddit_machinelearning.md  show_hn.md  x_thread.md
notebooks/: ASSTF_Quickstart.ipynb
papers/: asstf_dynamic_topology.tex  asstf_dynamic_topology_v2.tex
results/: benchmarks.json
results/app_01_gesture/: result.json
results/app_02_wake_word/: result.json
results/app_03_anomaly/: result.json
results/app_04_few_shot/: result.json
results/app_05_rl/: result.json
results/app_06_edge_nlp/: result.json
search/: search_index.json
shared/: __init__.py  baselines.py  early_stopping.py  metrics.py
tests/: test_apps_smoke.py  test_asstf_core.py
